Add rudimentary comments